--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "d3-force": "^3.0.0",
     "framer-motion": "^10.16.0",
     "lucide-react": "^0.294.0",
